force-app/main/default/objects/Inbound_Shipment_Line__c/Inbound_Shipment_Line__c.object-meta.xml
<CustomObject>
    <label>Inbound Shipment Line</label>
    <nameField>
        <displayFormat>INBL-{00000}</displayFormat>
        <label>Inbound Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Shipment Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>