force-app/main/default/objects/Inbound_Shipment_Line__c/fields/Expected_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Expected_Quantity__c</fullName>
    <label>Expected Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>