force-app/main/default/objects/Inbound_Shipment_Line__c/fields/Inbound_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Shipment__c</fullName>
    <label>Inbound Shipment</label>
    <referenceTo>Inbound_Shipment__c</referenceTo>
    <relationshipLabel>Shipment Lines</relationshipLabel>
    <relationshipName>Shipment_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>