force-app/main/default/objects/Inbound_Shipment_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Inbound Shipment Lines</relationshipLabel>
    <relationshipName>Inbound_Shipment_Lines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>