force-app/main/default/objects/Inbound_Shipment_Line__c/fields/Received_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Received_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Received Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>